After last day of class

--- a/home.html
+++ b/home.html
@@ -15,7 +15,9 @@
 </div>
 
     <div id="navi">
-      <h4> <div class="coloredBox">Home</div> <a class="coloredBox" href="places.html">Sites and Places</a><a class= "coloredBox" href="profile.html">Account</a></h4>
+      <div class="coloredBox"><a href="home.html"> Home </a></div>
+      <div class="coloredBox"><a href="places.html"> Sites and Places </a></div>
+      <div class="coloredBox"><a href="profile.html"> Account </a></div>
     </div>
   </header>
 
