--- a/MFS.html
+++ b/MFS.html
@@ -3,55 +3,33 @@
 
 <head>
   <title> michiana Locations </title>
-  <link href="distination.css" rel="stylesheet">
-    <link href="MFS.CSS" rel="stylesheet">
+  <link href="MFS.CSS" rel="stylesheet">
 </head>
 
 <body>
-
-  <header>
-    <h1>Michiana Destination</h1>
-
-<div id="signUpLogIn">
-    <a class="coloredBox" href="">Sign Up</a>
-    <a class="coloredBox" href="">Log In</a>
-</div>
-
-    <div id="navi">
-      <div class="coloredBox"><a href="home.html"> Home </a></div>
-      <div class="coloredBox"><a href="places.html"> Sites and Places </a></div>
-      <div class="coloredBox"><a href="profile.html"> Account </a></div>
-    </div>
-  </header>
-
 <div id= 'Dropdown'>
-  <select>
-    <option value="Bars">Bars</option>
-    <option value="Theaters">Theaters</option>
-    <option value="Restaurants">Restaurants</option>
-    <option value="Stores">stores</option>
-    <option value="Bowling Allys">Bowling Allys</option>
-    <option value="Skating">Skating</option>
-    <option value="Fast Food">Fast Food</option>
-    <option value="Mini Golf">Mini Golf</option>
-    <option value="Colleges">Colleges</option>
-</select>
+
 
 
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <p href="#">Link 1</p>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">Bars (Bars)</a>
+    <a href="#">Restaurants (restaurants)</a>
+    <a href="#">Convenience Stores (convenience)</a>
+    <a href="#">Bowling (bowling)</a>
+    <a href="#">Fast Food (hotdogs)</a>
+    <a href="#">Mini Golf (mini_golf)</a>
   </div>
 </div>
 </div>
 
-<div class="title">
+<h1> Menu</h1>
+<h2> sign up Login Home sites places accounts</h2>
+
 <h1> Sites/Locations</h1>
-<h2>  Bars restaurants fast food movie theaters stores churches bowling allys skate</h2>
-</div>
+
+
 </div>
 
 <ul class= "Location-List">
@@ -108,63 +86,6 @@
 </div>
 </li>
 
-
-    <li>
-  <img class="Location-Image" src="https://s3-media2.fl.yelpcdn.com/bphoto/WkFvnHexr0g47H-ad7bzCA/ls.jpg" width= 300px>
-  <div class="Location-Description">
-    <h2> Fiddler's Hearth </h2>
-    <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-    <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-  </div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </li>
 </ul>
 
 
@@ -192,9 +113,10 @@
 
 
 
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 
 
-  <script src="main.js"></script>
 </body>
 
 
