--- a/profile.html
+++ b/profile.html
@@ -12,12 +12,14 @@
     <h1>Michiana Destination</h1>
 
 <div id="signUpLogIn">
-    <a class="coloredBox" href="">Sign Up</a>
-    <a class="coloredBox" href="">Log In</a>
+    <a class="coloredBox" href="sighUp.html">Sign Up</a>
+    <a class="coloredBox" href="login">Log In</a>
 </div>
 
     <div id="navi">
-      <h4> <div class="coloredBox"><a href="home.html">Home</a></div> <a class="coloredBox" href="places.html">Sites and Places</a>Account</h4>
+      <div class="coloredBox"><a href="home.html"> Home </a></div>
+      <div class="coloredBox"><a href="places.html"> Sites and Places </a></div>
+      <div class="coloredBox">Account</div>
     </div>
   </header>
 
