Fixed typos and unified header code

--- a/places.html
+++ b/places.html
@@ -13,8 +13,8 @@
     <h1>Michiana Destination</h1>
 
 <div id="signUpLogIn">
-    <a class="coloredBox" href="">Sign Up</a>
-    <a class="coloredBox" href="">Log In</a>
+    <a class="coloredBox" href="signUp.html">Sign Up</a>
+    <a class="coloredBox" href="logIn.html">Log In</a>
 </div>
 
     <div id="navi">
