--- a/profile.html
+++ b/profile.html
@@ -2,32 +2,28 @@
 <html>
 <head>
   <title>michinana-acount</title>
-  <link href = "distination.css" rel="stylesheet">
-  <link href = "profile.css" rel="stylesheet">
+  <link href="distination.css" rel="stylesheet">
 </head>
-
 <body>
 
   <header>
     <h1>Michiana Destination</h1>
 
-<div id="signUpLogIn">
-    <a class="coloredBox" href="sighUp.html">Sign Up</a>
-    <a class="coloredBox" href="login">Log In</a>
-</div>
+    <div id="signUpLogIn">
+        <a class="coloredBox" href="logIn.html">Sign Up</a>
+        <a class="coloredBox" href="signUp.html">Log In</a>
+    </div>
 
     <div id="navi">
       <div class="coloredBox"><a href="home.html"> Home </a></div>
       <div class="coloredBox"><a href="places.html"> Sites and Places </a></div>
-      <div class="coloredBox">Account</div>
+      <div class="coloredBox"><a href="profile.html"> Account </a></div>
     </div>
   </header>
 
   <h1>Your Acount</h1>
   <img src='http://st.depositphotos.com/2020699/2039/v/950/depositphotos_20393809-Oriental-pattern-and-ornaments-circular.jpg' height="400px" width="400px">
   <h1>%%Ducky'oPancakes%%</h1>
-
-
 
   <h2>RecentEvents</h2>
   <ul class="event-list">
@@ -52,69 +48,10 @@
   </ul>
 
 
-<h1>Your Personality = INTP-(T)</h1>
-<h2>Introvert/Extrovert 87%</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<h1 class="ality">Your Personality = </h1>
+<h2 class="ality">Shy: <img src="http://www.clker.com/cliparts/x/n/7/m/p/g/check-mark-in-white-md.png" width="20px" height="20px"> </h2>
+<h2 class="ality">Outgoing: <img src="http://www.clker.com/cliparts/P/x/e/Y/z/O/white-x-cross-md.png" width="20px" height="20px"> </h2>
+<h2 class="ality">Creative: <img src="http://www.clker.com/cliparts/P/x/e/Y/z/O/white-x-cross-md.png" width="20px" height="20px"> </h2>
+<h2 class="ality">Practical: <img src="http://www.clker.com/cliparts/x/n/7/m/p/g/check-mark-in-white-md.png" width="20px" height="20px"></h2>
   </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
-
-
-
 </html>
