--- a/places.html
+++ b/places.html
@@ -4,13 +4,13 @@
 <head>
   <title> michiana Locations </title>
   <link href="distination.css" rel="stylesheet">
-    <link href="MFS.CSS" rel="stylesheet">
+  <link href="MFS.CSS" rel="stylesheet">
 </head>
 
 <body>
 
-  <header>
-    <h1>Michiana Destination</h1>
+<header>
+    <h1 style="color: white;">Michiana Destination</h1>
 
 <div id="signUpLogIn">
     <a class="coloredBox" href="signUp.html">Sign Up</a>
@@ -22,36 +22,25 @@
       <div class="coloredBox"><a href="places.html"> Sites and Places </a></div>
       <div class="coloredBox"><a href="profile.html"> Account </a></div>
     </div>
-  </header>
+</header>
 
 <div id= 'Dropdown'>
-  <select>
-    <option value="Bars">Bars</option>
-    <option value="Theaters">Theaters</option>
-    <option value="Restaurants">Restaurants</option>
-    <option value="Stores">stores</option>
-    <option value="Bowling Allys">Bowling Allys</option>
-    <option value="Skating">Skating</option>
-    <option value="Fast Food">Fast Food</option>
-    <option value="Mini Golf">Mini Golf</option>
-    <option value="Colleges">Colleges</option>
-</select>
+
 
 
 <div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">Categories</button>
   <div class="dropdown-content">
-    <p href="#">Link 1</p>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">Bars (Bars)</a>
+    <a href="#">Restaurants (restaurants)</a>
+    <a href="#">Convenience Stores (convenience)</a>
+    <a href="#">Bowling (bowling)</a>
+    <a href="#">Fast Food (hotdogs)</a>
+    <a href="#">Mini Golf (mini_golf)</a>
   </div>
 </div>
 </div>
 
-<div class="title">
-<h1> Sites/Locations</h1>
-<h2>  Bars restaurants fast food movie theaters stores churches bowling allys skate</h2>
-</div>
 </div>
 
 <ul class= "Location-List">
@@ -60,7 +49,7 @@
 <div class="Location-Description">
   <h2> Vegetable Buddies </h2>
   <p class="Location-Paragraph">With a highly-regarded history, the music joint called Vegetable Buddies is back. The new owners have stepped in once again to carry on VB's tradition. This bar is a live music venu with food and drinks!</p>
-  <a class="Website-Button" href="http://buddiesdtsb.com/about/index.htm" target="_blank"> Visit Webstite. </a>
+  <a class="Website-Button" href="http://buddiesdtsb.com/about/index.htm" target="_blank"> Visit Website </a>
 </div>
 
   </li>
@@ -69,7 +58,7 @@
 <div class="Location-Description">
   <h2> Fiddler's Hearth </h2>
   <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
+  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Website </a>
 </div>
 
   </li>
@@ -78,7 +67,7 @@
 <div class="Location-Description">
   <h2> Bar Louie </h2>
   <p class="Location-Paragraph">Bar Louie holds a unique placeholder in the Bar/Food/Drink Category. It is a place to watch the game or to just hang with some friends.</p>
-  <a class="Website-Button" href="http://www.barlouie.com/franchise-information/" target="_blank"> Visit Webstite. </a>
+  <a class="Website-Button" href="http://www.barlouie.com/franchise-information/" target="_blank"> Visit Website </a>
 </div>
 </li>
 <li>
@@ -86,7 +75,7 @@
 <div class="Location-Description">
 <h2> Cj's Pub </h2>
 <p class="Location-Paragraph">He opened CJ's Labor Day 1984 & made it the institution it is today with the simple but genius concept of having the best & biggest burger around (before the trend became popular) to create a great & fun place to party, but also a safe place by always looking out for his patrons.</p>
-<a class="Website-Button" href="http://www.cjs-pub.com/about.html" target="_blank"> Visit Webstite. </a>
+<a class="Website-Button" href="http://www.cjs-pub.com/about.html" target="_blank"> Visit Website </a>
 </div>
 </l1>
 
@@ -95,7 +84,7 @@
 <div class="Location-Description">
   <h2> O'Rourke's Public House </h2>
   <p class="Location-Paragraph"> ORourkes Public House is the place to go for great food, great drinks, and great fun.  Come in for lunch, dinner, or late night drinks and experience Irish tradition every day.</p>
-  <a class="Website-Button" href="http://www.orourkespubhouse.com/about-us/" target="_blank"> Visit Webstite. </a>
+  <a class="Website-Button" href="http://www.orourkespubhouse.com/about-us/" target="_blank"> Visit Website </a>
 </div>
 </li>
 
@@ -104,67 +93,10 @@
 <div class="Location-Description">
   <h2> Madison Oyster Bar </h2>
   <p class="Location-Paragraph">The dining experience starts with tradition that has been handed down from generation to generation by the Simeri Family.  You are immediately drawn in by their beautiful wood bar and the warm colors of the decor and lighting. Multiple big screen TVs, darts & pool tables all combine to make a very chill and comfortable, yet classic atmosphere. Madison Oyster Bar has a feel differing from all other sports or college bars in the area, yet lacks pretension, making it a perfect place to meet for a drink after work, gather up during a football game, or anything in between.</p>
-  <a class="Website-Button" href="https://www.yelp.com/biz/madison-oyster-bar-south-bend" target="_blank"> Visit Webstite. </a>
+  <a class="Website-Button" href="https://www.yelp.com/biz/madison-oyster-bar-south-bend" target="_blank"> Visit Website </a>
 </div>
 </li>
 
-
-    <li>
-  <img class="Location-Image" src="https://s3-media2.fl.yelpcdn.com/bphoto/WkFvnHexr0g47H-ad7bzCA/ls.jpg" width= 300px>
-  <div class="Location-Description">
-    <h2> Fiddler's Hearth </h2>
-    <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-    <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-  </div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-  <li>
-<img class="Location-Image" src="https://iusbcreativewriting.files.wordpress.com/2008/03/679057099_a0e54a5765.jpg" width= 300px>
-<div class="Location-Description">
-  <h2> Fiddler's Hearth </h2>
-  <p class="Location-Paragraph">fiddler's Hearth prides itself on emphasizing the true spirit of a Public House. A Family Friendly gathering palce for Celtic artists and the public at large, we proudly represent the Seven Celtic Nations in the heart of South Bend with great music, high quality food & drink's from the Celtic lands, and a relaxing atmosphere.</p>
-  <a class="Website-Button" href="http://www.fiddlershearth.com/" target="_blank"> Visit Webstite. </a>
-</div>
-</li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </li>
 </ul>
 
 
@@ -192,9 +124,10 @@
 
 
 
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 
 
-  <script src="main.js"></script>
 </body>
 
 
