--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,8 @@
     <h1>Michiana Destination</h1>
 
     <div id="signUpLogIn">
-        <a class="coloredBox" href="logIn.html">Sign Up</a>
-        <a class="coloredBox" href="signUp.html">Log In</a>
+        <a class="coloredBox" href="signUp.html">Sign Up</a>
+        <a class="coloredBox" href="logIn.html">Log In</a>
     </div>
 
     <div id="navi">
@@ -23,7 +23,7 @@
 
   <h1>Your Acount</h1>
   <img src='http://st.depositphotos.com/2020699/2039/v/950/depositphotos_20393809-Oriental-pattern-and-ornaments-circular.jpg' height="400px" width="400px">
-  <h1>%%Ducky'oPancakes%%</h1>
+  <h1 id="name"></h1>
 
   <h2>RecentEvents</h2>
   <ul class="event-list">
@@ -53,5 +53,9 @@
 <h2 class="ality">Outgoing: <img src="http://www.clker.com/cliparts/P/x/e/Y/z/O/white-x-cross-md.png" width="20px" height="20px"> </h2>
 <h2 class="ality">Creative: <img src="http://www.clker.com/cliparts/P/x/e/Y/z/O/white-x-cross-md.png" width="20px" height="20px"> </h2>
 <h2 class="ality">Practical: <img src="http://www.clker.com/cliparts/x/n/7/m/p/g/check-mark-in-white-md.png" width="20px" height="20px"></h2>
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+  <script src="profile.js"></script>
   </body>
 </html>
