--- a/signUp.html
+++ b/signUp.html
@@ -11,17 +11,21 @@
 
     <h2>Sign Up</h2>
     <div class= "boxes">
-  <form action="demo_form.asp">
-First name:<div class= "boxes"><input type="text" height="100px" name="FirstName"><br>
+  <form id="signup">
+First name:<div class= "boxes"><input type="text" height="100px" id="FirstName"><br>
 </div>
-Last name: <div class= "boxes"><input type="text" name="LastName" ><br>
+Last name: <div class= "boxes"><input type="text" id="LastName" ><br>
 </div>
-Username: <div class= "boxes"><input type="text"  name="Username" ><br>
+Email: <div class= "boxes"><input type="text"  id="email" ><br>
 </div>
-Password: <div class="boxes"><input type="text" name= "Password" ><br>
+Password: <div class="boxes"><input type="password" id="password" ><br>
 </div>
 <input type="submit" value="Submit" width="40px">
   </div>
 </form>
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+  <script src="profile.js"></script>
   </body>
   </html>
