--- a/home.html
+++ b/home.html
@@ -38,9 +38,9 @@
 
 <div id="mid">
   <h1>What we're about</h1>
-  <p>Are mission with this website is to help people find their way around the Michiana area, based on results from a personallity quiz.</p>
+  <p>Our mission with this website is to help people find their way around the Michiana area, based on results from a personallity quiz.</p>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1476315644920!6m8!1m7!1setBolCQHkr9nZ4xdWewKdQ!2m2!1d41.67434620106299!2d-86.2503419684303!3f79.69054420517348!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1476315644920!6m8!1m7!1setBolCQHkr9nZ4xdWewKdQ!2m2!1d41.67434620106299!2d-86.2503419684303!3f79.69054420517348!4f0!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <a class="personalityTest" href="personality.html">Take the Personality Test</a>
 
